# mlops-fastapi

./: .gitignore  Dockerfile  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  testing.ipynb
.github/workflows/: build_and_push.yaml  ci.yaml
api/: app.py
auth/: bearer.py
cli/: main.py
common/: containers.py
config/: __init__.py  config.yml
infra/: app_runner.tf  backend.tf  ecr.tf  ecs_cluster.tf  service.tf
models/: responses.py
nlp/: test_text_summerization.py  text_generator.py  text_summerization.py
routers/: gpt2.py  healthcheck.py  image.py  main.py  nlp.py
tests/: test_text_generator.py  test_text_summerization.py
